Prevent pagination links from wrapping; fixes #1745

--- a/app/assets/stylesheets/blacklight/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/blacklight/_bootstrap_overrides.scss
@@ -20,3 +20,8 @@
     }
   }
 }
+
+
+.page-link {
+  white-space: nowrap;
+}
